--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "private": true,
   "dependencies": {
+    "-": "0.0.1",
     "@angular/animations": "~10.0.5",
     "@angular/cli": "^10.0.5",
     "@angular/common": "~10.0.5",
@@ -28,8 +29,10 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "angular-cli-ghpages": "^0.6.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "g": "^2.0.1",
     "httpclient": "^0.1.0",
     "ng-click-outside": "^7.0.0",
     "path": "^0.12.7",
