--- a/package.json
+++ b/package.json
@@ -2,21 +2,16 @@
   "name": "web-app",
   "version": "0.0.1",
   "scripts": {
-    "heroku-postbuild": "ng build --prod",
     "ng": "ng",
-    "start": "node server.js",
+    "start":"ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
   },
-  "engines": {
-    "node": "12.8.1",
-    "npm": "6.10.2"
-  },
+ 
   "private": true,
   "dependencies": {
-    "-": "0.0.1",
     "@angular/animations": "~10.0.5",
     "@angular/cli": "^10.0.5",
     "@angular/common": "~10.0.5",
@@ -29,10 +24,8 @@
     "@angular/platform-browser-dynamic": "~10.0.5",
     "@angular/router": "~10.0.5",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "angular-cli-ghpages": "^0.6.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
-    "g": "^2.0.1",
     "httpclient": "^0.1.0",
     "ng-click-outside": "^7.0.0",
     "path": "^0.12.7",
